[package]
name = "rbtree-defrag-buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
intrusive-collections = "0.9.6"

[dev-dependencies]
clap = { version = "4.4.4", features = ["derive"] }
rand = "0.8.5"
