[package]
name = "rbtree-defrag-buffer"
version = "0.1.0"
edition = "2021"
description = "Red-black tree based defragmentation buffer that maintains inserted and free intervals."
authors = ['jerry73204 <jerry73204@gmail.com>']
documentation = 'https://docs.rs/rbtree-defrag-buffer/'
repository = 'https://github.com/jerry73204/rbtree-defrag-buffer.git'
homepage = 'https://github.com/jerry73204/rbtree-defrag-buffer'
readme = 'README.md'
license = 'MIT'

[dependencies]
anyhow = "1.0.75"
intrusive-collections = "0.9.6"

[dev-dependencies]
clap = { version = "4.4.4", features = ["derive"] }
rand = "0.8.5"
